--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dance-website",
+  "name": "timer-site",
   "version": "1.0.0",
   "description": "This is a Simple Dance website",
   "main": "app.js",
@@ -12,9 +12,15 @@
   "dependencies": {
     "body-parse": "^0.1.0",
     "body-parser": "^1.20.0",
+    "bootstrap": "^5.2.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
+    "node": "^18.8.0",
     "pug": "^3.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "N"
   }
 }
